--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "202309-w4ch2-alejandro-irastorza",
+  "name": "week4",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -20,9 +20,14 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "sass": "^1.69.5",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
+  },
+  "prettier": {
+    "singleQuote": true
   }
 }
